tests/NormalTests/paczka1/fuzzy1/20346077.err
Error in line 1: N3gpzuhyb A769 69,5
Error in line 4: N3gpzuhyb S984 11,1
Error in line 13: KQJP30 S984 12,54
Error in line 14: lSm4 A769 97,8
Error in line 22: S<06 A769 6,8
Error in line 16: lSm4 S106 77,7
Error in line 28: lSm4 A769 41,3
Error in line 8: KQJP30 S984 16,6
